# electronoos

./: README.md  aspire_imdb_faces.py  dump_rfid_extrapin_to_analyse.txt  mystique_song.py
alex_pytools/: nlp.py  (+48 more)
snt_nsi/website-2024/: README.md  pyproject.toml  w.sh
snt_nsi/website-2024/src/: mkdocs.yml  requirements.txt  run.sh
snt_nsi/website-2024/src/docs/: index.md  j.htm
snt_nsi/website-2024/src/docs/nsi1re/: index.md
snt_nsi/website-2024/src/docs/nsi1re/01-langages-web/: tp1-creation-page-web.md
snt_nsi/website-2024/src/docs/nsi1re/02-ordinateurs/: tp1-cli.md
snt_nsi/website-2024/src/docs/nsi1re/03-bases-programmation/: tp3-turtle.md
snt_nsi/website-2024/src/docs/nsi1re/05-archi/: tp1-compos_ordi.md
snt_nsi/website-2024/src/docs/nsi1re/06-tableaux/: tp2-tableaux-2d.md
snt_nsi/website-2024/src/docs/nsi1re/0X-extras/: 01_Initiation_Pygame.md  01_initiation_pygame.md
snt_nsi/website-2024/src/docs/nsi1re/11-dictionnaires/: tp3-format-json.md
snt_nsi/website-2024/src/docs/nsi1re/12-tables/: csv.md
snt_nsi/website-2024/src/docs/nsi1re/14-web/: langage-php.md  tp2-tkinter.md
snt_nsi/website-2024/src/docs/nsi1re/projets/: prj-presentez-vous.md
snt_nsi/website-2024/src/docs/snt/: index.md
snt_nsi/website-2024/src/docs/snt/01-internet/: tp1-naissance-internet.md
snt_nsi/website-2024/src/docs/snt/02-web/: tp1-langage-html.md  tp2-langage-css.md  tp3-confidentialite.md
snt_nsi/website-2024/src/docs/snt/04-donnees-structurees/: tp-stockage-cloud.md
snt_nsi/website-2024/src/docs/snt/04-processing/: tp1_python_turtle.md  tp2_python_turtle2.md  (+1 more)
(+828 files in other folders)
